--- a/Stage 2 Csv LatLng/CSV-LAT_LNG-GOOGLE.ipynb
+++ b/Stage 2 Csv LatLng/CSV-LAT_LNG-GOOGLE.ipynb
@@ -6,20 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Python script for batch geocoding of addresses using the Google Geocoding API.\n",
-    "This script allows for massive lists of addresses to be geocoded for free by pausing when the \n",
-    "geocoder hits the free rate limit set by Google (2500 per day).  If you have an API key for paid\n",
-    "geocoding from Google, set it in the API key section.\n",
-    "Addresses for geocoding can be specified in a list of strings \"addresses\". In this script, addresses\n",
-    "come from a csv file with a column \"Address\". Adjust the code to your own requirements as needed.\n",
-    "After every 500 successul geocode operations, a temporary file with results is recorded in case of \n",
-    "script failure / loss of connection later.\n",
-    "Addresses and data are held in memory, so this script may need to be adjusted to process files line\n",
-    "by line if you are processing millions of entries.\n",
-    "Shane Lynn\n",
-    "5th November 2016\n",
-    "\"\"\"\n",
     "\n",
     "import pandas as pd\n",
     "import requests\n",
@@ -41,7 +27,7 @@
     "# With a \"Google Maps Geocoding API\" key from https://console.developers.google.com/apis/, \n",
     "# the daily limit will be 2500, but at a much faster rate.\n",
     "# Example: API_KEY = 'AIzaSyC9azed9tLdjpZNjg2_kVePWvMIBq154eA'\n",
-    "API_KEY = \"AIzaSyB-boRA8KJLAJ7bvj-BRwCGqsl11YvTc3M\"\n",
+    "API_KEY = \"Your GOOGLE  API KEY HERE"\n",
     "# Backoff time sets how many minutes to wait between google pings when your API limit is hit\n",
     "BACKOFF_TIME = 30\n",
     "# Set your output file name here.\n",
